// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WTWLogo correctly renders default markup 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link"
    href="/"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;

exports[`WTWLogo correctly renders light markup 1`] = `
<div
  className="logo"
>
  <a
    className="logo__link logo__link--light"
    href="/"
  >
    <span
      className="logo__letter logo__letter--1"
    >
      W
    </span>
    <span
      className="logo__letter logo__letter--2"
    >
      T
    </span>
    <span
      className="logo__letter logo__letter--3"
    >
      W
    </span>
  </a>
</div>
`;
